# ariadne

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
src/ariadne/: __init__.py  __main__.py  cli.py  config.py
src/ariadne/engine/: __init__.py  playbook.py  playbook_templates.py  privesc.py  scoring.py  sprawl.py  synthesizer.py  techniques.py
src/ariadne/exporters/: __init__.py  indago.py
src/ariadne/graph/: __init__.py  builder.py  queries.py  store.py
src/ariadne/llm/: __init__.py  client.py  prompts.py
src/ariadne/models/: __init__.py  asset.py  attack_path.py  finding.py  playbook.py  relationship.py
src/ariadne/output/: __init__.py  html_report.py  json_report.py
src/ariadne/output/templates/: report.html.j2
src/ariadne/parsers/: __init__.py  adrecon.py  amass.py  azurehound.py  base.py  bloodhound.py  censys.py  certipy.py  cobaltstrike.py  crackmapexec.py  enum4linux.py  eyewitness.py  grouper2.py  havoc.py  httpx.py  impacket.py  kerbrute.py  ldapdomaindump.py  ldeep.py  masscan.py  metasploit.py  mimikatz.py  mitm6.py  mythic.py  nessus.py  nmap.py  ntlmrelayx.py  nuclei.py  openvas.py  pingcastle.py  plumhound.py  powerview.py  qualys.py  registry.py  responder.py  rpcclient.py  rubeus.py  rustscan.py  seatbelt.py  sharpup.py  (+9 more)
src/ariadne/parsers/cloud/: __init__.py  aws_scout.py  azure_enum.py
src/ariadne/web/: __init__.py  app.py  exceptions.py  session_store.py
src/ariadne/web/routes/: __init__.py  analysis.py  graph.py  ingest.py
src/ariadne/web/static/css/: style.css
src/ariadne/web/static/js/: graph.js
tests/: __init__.py  conftest.py  test_cli.py  test_config.py
tests/fixtures/: generators.py
tests/fixtures/parsers/: __init__.py
tests/fixtures/sample_data/: sample_nmap.xml  sample_nuclei.json
tests/test_engine/: test_playbook.py  test_privesc.py  test_scoring.py  test_sprawl.py  test_synthesizer.py  test_techniques.py
tests/test_exporters/: test_indago.py
tests/test_graph/: test_builder.py  test_queries.py  test_store.py
tests/test_integration/: __init__.py  test_pipeline.py
tests/test_llm/: test_client.py  test_prompts.py
tests/test_models/: test_asset.py  test_attack_path.py  test_finding.py  test_relationship.py
tests/test_output/: test_html_report.py  test_json_report.py
tests/test_parsers/: base.py  conftest.py  test_adrecon.py  test_amass.py  test_azurehound.py  test_bloodhound.py  test_censys.py  test_certipy.py  test_cobaltstrike.py  test_crackmapexec.py  test_enum4linux.py  test_eyewitness.py  test_grouper2.py  test_havoc.py  test_httpx.py  test_impacket.py  test_kerbrute.py  test_ldapdomaindump.py  test_ldeep.py  test_masscan.py  test_metasploit.py  test_mimikatz.py  test_mitm6.py  test_mythic.py  test_nessus.py  test_nmap.py  test_ntlmrelayx.py  test_nuclei.py  test_openvas.py  test_pingcastle.py  test_plumhound.py  test_powerview.py  test_qualys.py  test_responder.py  test_rpcclient.py  test_rubeus.py  test_rustscan.py  test_seatbelt.py  test_sharpup.py  test_shodan.py  (+8 more)
tests/test_web/: __init__.py  conftest.py  test_analysis.py  test_app.py  test_exceptions.py  test_graph.py  test_ingest.py  test_session_store.py
